crates/macros/tests/fail/fixed-layout/not-repr-c.rs
use mem_markers::FixedLayout;

#[derive(FixedLayout)]
struct Foo {
    a: u8,
}

fn main() {}
