crates/macros/tests/fail/fixed-layout/not-repr-c.stderr
error: FixedLayout trait requires #[repr(C)] or #[repr(transparent)] on structs with fields
 --> $DIR/not-repr-c.rs:3:10
  |
3 | #[derive(FixedLayout)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
